# soc3050code

./: .gitignore  CLEANUP_SUMMARY.md  COMPLETION_REPORT.md  CURRICULUM_COMPLETION_SUMMARY.md  DOCUMENTATION_INDEX.md  EDUCATIONAL_FRAMEWORK.md  EDUCATIONAL_TEST_RESULTS.md  ENHANCEMENT_COMPLETION_REPORT.md  FRAMEWORK_COMPLETE.md  FRAMEWORK_GUIDE.md  GITHUB_SETUP.md  GLCD_LIBRARY_ENHANCEMENTS.md  LAB_EXERCISE_GUIDE.md  LAB_IMPLEMENTATION_SUMMARY.md  LAB_QUICK_START.md  LIBRARY_ENHANCEMENTS_SUMMARY.md  Main.atsln  PORTABLE_SYSTEM_COMPLETE.md  PROJECT_CATALOG.md  PYTHON_PROJECTS_GUIDE.md  README.md  REORGANIZATION_SUMMARY.md  SCRIPTS.md  SETUP_SIMPLIFIED.md  SIMULIDE_FIXES.md  SIMULIDE_GUIDE.md  SIMULIDE_INTEGRATION_SUMMARY.md  SIMULIDE_POSTER.md  SIMULIDE_QUICK_REFERENCE.md  SIMULIDE_SETUP_COMPLETE.md  STUDENT_QUICK_REFERENCE.md  STUDENT_SETUP_README.md  Simulator.simu  Simulator0415.simu  Simulator110.sim1  Simulator110.simu  TODO.md  activate.ps1  build.bat  build_and_program_project.ps1  (+20 more)
Main/: Main.c  Main.componentinfo.xml  Main.cproj  Template.h  _adc.c  _adc.h  _adc_optimized.c  _adc_optimized.h  _buzzer.c  _buzzer_optimized.c  _buzzer_optimized.h  _eeprom.c  _glcd.c  _glcd.h  _init.c  _init.h  _init_optimized.c  _init_optimized.h  _interrupt.c  _interrupt.h  _main.h  _port.c  _port.h  _port_optimized.c  _port_optimized.h  _timer2.c  _timer2.h  _uart.c  _uart.h  _uart_optimized.c  _uart_optimized.h  build.bat  build.ps1  config.h  config_educational.h  educational_demo.c  educational_flow_test.c  educational_simple_test.c  lab_serial.c  main_accelerometer.c  (+26 more)
(+1322 files in other folders)
